# esp32-simple-signal-reader

./: .gitignore  README.md  sdkconfig
esp32-samples-reader/: Cargo.toml
esp32-samples-reader/src/: ctrlc.rs  io.rs  main.rs
esp32-samples-reader/src/commands/: mod.rs  pulse_stream.rs  read_wav.rs
main/: CMakeLists.txt  signalreader.c
